"Megrendelés" button fixed, not showing up when cart is empty.

--- a/src/main/resources/static/new_home.css
+++ b/src/main/resources/static/new_home.css
@@ -446,3 +446,10 @@ nav .fa-bars:hover {
     padding:10px;
     font-size: 18px;
 }
+
+.cartEmpty{
+    color: white;
+    font-size: 30px;
+    padding-left: 40%;
+    padding-right: 40%;
+}
